the second way to authorize api